trunk/Archive2/ca/57687d143e090d/output
main.cpp: In function 'int main()':
main.cpp:75:18: error: unable to find string literal operator 'operator""sizeof'
     std::cout << "sizeof(A::kRestrictedNZValues): "sizeof(A::kRestrictedNZValues) << std::endl
                  ^
